2007-02-02  Alan Modra  <amodra@bigpond.net.au>

	* ppc-opc.c (insert_bdm): -Many comment.
	(valid_bo): Add "extract" param.  Accept both powerpc and power4
	BO fields when disassembling with -Many.
	(insert_bo, extract_bo, insert_boe, extract_boe): Adjust valid_bo call.

2007-01-08  Kazu Hirata  <kazu@codesourcery.com>

	* m68k-opc.c (m68k_opcodes): Replace cpu32 with
	cpu32 | fido_a except on tbl instructions.

2007-01-04  Paul Brook  <paul@codesourcery.com>

	* arm-dis.c (arm_opcodes): Fix cpsie and cpsid entries.

2007-01-04  Andreas Schwab  <schwab@suse.de>

	* m68k-opc.c: Fix encoding of signed bit in the cpu32 tbls insns.

2007-01-04  Julian Brown  <julian@codesourcery.com>

	* arm-dis.c (neon_opcode): Fix disassembly for vshl, vqshl, vrshl,
	vqrshl instructions.

For older changes see ChangeLog-2006

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: